// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Icon Component correctly 1`] = `
<i
  className="material-icons  sc-bdVaJa kHZSUx"
  color={undefined}
  scale={undefined}
>
  check_circle
</i>
`;

exports[`renders the Icon Component correctly 2`] = `
<i
  className="material-icons  sc-bdVaJa jijRFs"
  color="success"
  scale="l"
>
  check_circle
</i>
`;

exports[`renders the Icon Component correctly 3`] = `
<i
  className="material-icons  sc-bdVaJa jijRFs"
  color="success"
  scale="l"
>
  check_circle
</i>
`;

exports[`renders the Icon Component correctly 4`] = `
<i
  className="material-icons  sc-bdVaJa locMe"
  color="success"
  scale={undefined}
>
  check_circle
</i>
`;

exports[`renders the Icon Component correctly 5`] = `
<i
  className="material-icons  sc-bdVaJa bmlpAL"
  color="success"
  scale={undefined}
>
  settings
</i>
`;
